update name ref

--- a/root/demo.html
+++ b/root/demo.html
@@ -3,21 +3,20 @@
 
 <head>
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-  <title>
-    <% name %>Demo</title>
+  <title><%= name %>Demo</title>
 
   <script src="../platform/platform.js"></script>
-  <link rel="import" href="<% name %>.html">
+  <link rel="import" href="<%= name %>.html">
 
 </head>
 
 <body unresolved>
 
-  <p>An example of using <code><% name %></code>:</p>
+  <p>An example of using <code><%= name %></code>:</p>
 
-  <<% name %>>
-    <h2>Hello <% name %></h2>
-  </<% name %>>
+  <<%= name %>>
+    <h2>Hello <%= name %></h2>
+  </<%= name %>>
 
 </body>
 
