--- a/root/example.html
+++ b/root/example.html
@@ -1,21 +1,21 @@
 <link rel="import" href="../polymer/polymer.html">
 
-<polymer-element name="<% name %>" attributes="">
+<polymer-element name="<%= name %>" attributes="">
 
   <template>
 
-    <link rel="stylesheet" href="<% name %>.css" />
+    <link rel="stylesheet" href="<%= name %>.css" />
 
-    <h1>Hello from <% name %></h1>
+    <h1>Hello from <%= name %></h1>
     <content></content>
 
   </template>
 
   <script>
 
-    Polymer('<% name %>', {
+    Polymer('<%= name %>', {
       ready: function() {
-        console.log('<% name %> is ready!')
+        console.log('<%= name %> is ready!')
       }
   </script>
 
